<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_note_btn">Добавить</string>
    <string name="start_label">Что использовать?</string>
    <string name="room_btn">ROOM</string>
    <string name="title_app">Заметки</string>
    <string name="toast_enter_name">Enter name!</string>
    <string name="firebase_btn">firebase</string>
    <string name="start_hint_email">email</string>
    <string name="start_hint_password">password</string>
    <string name="start_login_btn">login</string>
    <string name="et_hint_title">Заголовок</string>
    <string name="et_hint_text">Teкст</string>
</resources>